# stdctemplate

./: .gitmodules  CMakeLists.txt  README_CN.md
3rd/: CMakeLists.txt
libs/: CMakeLists.txt
libs/easylogger/: CMakeLists.txt
libs/easylogger/inc/: elog_cfg.h
src/: CMakeLists.txt  main.c
